# domino-bot

./: .gitignore  100_percent_tasks.md  README.md  controller_manager.yaml  main.py  pyproject.toml
.github/workflows/: ci.yaml
src/domino_project/: CMakeLists.txt  README_DOMINO.md  package.xml  setup.cfg  setup.py
src/domino_project/config/: domino_gripper.yaml  domino_moveit.rviz  domino_moveit_controllers.yaml  kinematics.yaml  ompl_tuning.yaml  params.yaml
src/domino_project/domino_project/: domino_picker.cpp  robot_mover.cpp  robot_mover.py  vision_processor.py  vision_processor.py.save  vision_test_publisher.py
src/domino_project/launch/: final_system.launch.py  final_system_moveit.launch.py  simulation.launch.py  spawn_domino.launch.py
src/domino_project/models/camera_sensor/: model.config  model.sdf
src/domino_project/models/domino_br/: model.sdf
src/domino_project/models/domino_gb/: model.config  model.sdf
src/domino_project/models/domino_rg/: model.sdf
src/domino_project/models/work_table/: model.config  model.sdf
src/domino_project/plugins/: link_attacher_plugin.cpp
src/domino_project/scripts/: run_randomized_validation.py  safety_check.py
src/domino_project/tests/integration/: test_pick_place_integration.sh
src/domino_project/urdf/: simple_arm.urdf
src/domino_project/worlds/: domino_table.world  panda_domino.world
